[tool.poetry]
name = "audio_tagger"
version = "1.0.0"
description = ""
authors = ["Timon Tomas <ttimon7@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]
packages = [{include = "sootworks", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
musicbrainzngs = "^0.7.1"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"
pydantic = "^1.10.9"
termcolor = "^2.3.0"
install = "^1.3.5"
eyed3 = "^0.9.7"
pillow = "^10.0.0"
music-tag = "^0.4.3"
pre-commit = "^3.3.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^23.3.0"
pytest = "^7.4.0"

[tool.poetry.scripts]
demo-cli = "audio_tagger.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
